# psplash

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  make-image-header.sh  psplash-bar-img.h  psplash-colors.h  psplash-config.h  psplash-console.c  psplash-console.h  psplash-fb.c  psplash-fb.h  psplash-hand-img.h  psplash-image.h  psplash-poky-img.h  psplash-systemd.c  psplash-write.c  psplash.c  psplash.doap  psplash.h  radeon-font.h
